{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 1949,
  "lineage": "855c5cff-5eff-669e-9c07-ed910bd4b457",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lab1_private_to_bastion_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0879cff1959c839991080289494",
            "instance_id": "i-03c894c3b210958a7",
            "instance_owner_id": "149822431811",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-096332179859e458b",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0879cff1959c83999",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0314b21f4b74d3792",
            "arn": "arn:aws:ec2:us-east-1:149822431811:elastic-ip/eipalloc-0314b21f4b74d3792",
            "association_id": "eipassoc-0bac4d10251c94400",
            "domain": "vpc",
            "id": "eipalloc-0314b21f4b74d3792",
            "instance": "i-03c894c3b210958a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-096332179859e458b",
            "private_dns": "ip-10-10-1-123.ec2.internal",
            "private_ip": "10.10.1.123",
            "public_dns": "ec2-54-221-159-170.compute-1.amazonaws.com",
            "public_ip": "54.221.159.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lab1_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-03c894c3b210958a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c894c3b210958a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096332179859e458b",
            "private_dns": "ip-10-10-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.123",
            "public_dns": "ec2-54-221-159-170.compute-1.amazonaws.com",
            "public_ip": "54.221.159.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7cf52162eff75c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d545f2665d02b2e8",
            "tags": {
              "Name": "lab1-bastion",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-bastion",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0851bdfb126cb2cfc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_data_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-03c0709ba4d79ee21",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c0709ba4d79ee21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0094d1d2434a031f9",
            "private_dns": "ip-10-10-11-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.11.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0307dbe56c6d79d56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01208f25e975bf236",
            "tags": {
              "Name": "lab1-data-stack",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-data-stack",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-027794de2d63020b1",
              "sg-04dc7dcb9da2c610e",
              "sg-0ebb2af5f3a8e276a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02451674f0a1de232",
            "arn": "arn:aws:ec2:us-east-1:149822431811:elastic-ip/eipalloc-02451674f0a1de232",
            "association_id": "eipassoc-025c46d521d7a0cfc",
            "domain": "vpc",
            "id": "eipalloc-02451674f0a1de232",
            "instance": "i-0bca6ac981c7ba302",
            "network_border_group": "us-east-1",
            "network_interface": "eni-070ad9076350fc596",
            "private_dns": "ip-10-10-2-183.ec2.internal",
            "private_ip": "10.10.2.183",
            "public_dns": "ec2-174-129-158-50.compute-1.amazonaws.com",
            "public_ip": "174.129.158.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lab1_gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-0bca6ac981c7ba302",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bca6ac981c7ba302",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070ad9076350fc596",
            "private_dns": "ip-10-10-2-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.183",
            "public_dns": "ec2-174-129-158-50.compute-1.amazonaws.com",
            "public_ip": "174.129.158.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d372484193f9c2e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb82ebfb98160a5d",
            "tags": {
              "Name": "lab1-api-gateway",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-api-gateway",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0263deb8ab3f5f8b3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_internal_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e",
            "arn_suffix": "app/microservices-alb/c86b1d1ab075cd1e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-microservices-alb-455340327.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c1cd0f79d1d13dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01208f25e975bf236"
              },
              {
                "subnet_id": "subnet-0ed8b11b15ee1c272"
              }
            ],
            "subnets": [
              "subnet-01208f25e975bf236",
              "subnet-0ed8b11b15ee1c272"
            ],
            "tags": {
              "Name": "lab1-internal-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-internal-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_internal_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-auth/fbdeda19e24cdfdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_internal_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "paths",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-academic-record/9471da0c6cc31e6f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/026fefda16aab998",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/records/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/026fefda16aab998",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 70,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "audit",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-audit/cdc81ccaf6ec2bc6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/de057b84a0eb0345",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/audit/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/de057b84a0eb0345",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-calendar/05ed30058b24ab92",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/445b693101f7a411",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/calendar/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/445b693101f7a411",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 60,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-forum/c887c2be97e7eddd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/b4288b5d358f1435",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/forum/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/b4288b5d358f1435",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 30,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-notification/b2c8e0e9cc73f717",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/222896aa3655c457",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/notifications/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/222896aa3655c457",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 80,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-payment/1f21416a42b473de",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/fc31f90f45ba5cf7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payments/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/fc31f90f45ba5cf7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 50,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "reporting",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-reporting/38ee87248ad4b03b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/675e3235ffe605b3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/reporting/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/675e3235ffe605b3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 90,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-tutoring/d02681edcf5e6924",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/cd9c1eef0363734a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/tutoring/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/cd9c1eef0363734a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 40,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-user/941c889ac06d4da9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/b4e1138fa03e541d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/users/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener-rule/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56/b4e1138fa03e541d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:listener/app/microservices-alb/c86b1d1ab075cd1e/aeac1262af144b56",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb.this",
            "module.lab1_internal_alb.aws_lb_listener.http",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_internal_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-academic-record/9471da0c6cc31e6f",
            "arn_suffix": "targetgroup/tg-academic-record/9471da0c6cc31e6f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/records/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-academic-record/9471da0c6cc31e6f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-academic-record",
            "port": 8007,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-academic-record",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-academic-record",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "audit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-audit/cdc81ccaf6ec2bc6",
            "arn_suffix": "targetgroup/tg-audit/cdc81ccaf6ec2bc6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/audit/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-audit/cdc81ccaf6ec2bc6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-audit",
            "port": 8010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-audit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-audit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-auth/fbdeda19e24cdfdf",
            "arn_suffix": "targetgroup/tg-auth/fbdeda19e24cdfdf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/auth/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-auth/fbdeda19e24cdfdf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-auth",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-auth",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-auth",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-calendar/05ed30058b24ab92",
            "arn_suffix": "targetgroup/tg-calendar/05ed30058b24ab92",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/calendar/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-calendar/05ed30058b24ab92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-calendar",
            "port": 8005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-forum/c887c2be97e7eddd",
            "arn_suffix": "targetgroup/tg-forum/c887c2be97e7eddd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/forum/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-forum/c887c2be97e7eddd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-forum",
            "port": 8002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-notification/b2c8e0e9cc73f717",
            "arn_suffix": "targetgroup/tg-notification/b2c8e0e9cc73f717",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/notifications/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-notification/b2c8e0e9cc73f717",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-notification",
            "port": 8008,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-notification",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-notification",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-payment/1f21416a42b473de",
            "arn_suffix": "targetgroup/tg-payment/1f21416a42b473de",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/payments/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-payment/1f21416a42b473de",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-payment",
            "port": 8004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-payment",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-payment",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "reporting",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-reporting/38ee87248ad4b03b",
            "arn_suffix": "targetgroup/tg-reporting/38ee87248ad4b03b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/reporting/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-reporting/38ee87248ad4b03b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-reporting",
            "port": 8009,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-reporting",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-reporting",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-tutoring/d02681edcf5e6924",
            "arn_suffix": "targetgroup/tg-tutoring/d02681edcf5e6924",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/tutoring/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-tutoring/d02681edcf5e6924",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-tutoring",
            "port": 8003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-tutoring",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-tutoring",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-user/941c889ac06d4da9",
            "arn_suffix": "targetgroup/tg-user/941c889ac06d4da9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/users/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-user/941c889ac06d4da9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149822431811:loadbalancer/app/microservices-alb/c86b1d1ab075cd1e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-user",
            "port": 8006,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab1-tg-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-tg-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_internal_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "svc_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-academic-record/9471da0c6cc31e6f-2026012304495029940000000c",
            "port": 8007,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-academic-record/9471da0c6cc31e6f",
            "target_id": "i-00aaaf988aac1d62c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "audit",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-audit/cdc81ccaf6ec2bc6-2026012304494996640000000a",
            "port": 8010,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-audit/cdc81ccaf6ec2bc6",
            "target_id": "i-0e589e92f11c3021b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-auth/fbdeda19e24cdfdf-2026012304495029940000000d",
            "port": 8001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-auth/fbdeda19e24cdfdf",
            "target_id": "i-04e2efb492661db9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-calendar/05ed30058b24ab92-20260123044949887800000007",
            "port": 8005,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-calendar/05ed30058b24ab92",
            "target_id": "i-084e51edab72b0ac6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-forum/c887c2be97e7eddd-20260123044949887800000006",
            "port": 8002,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-forum/c887c2be97e7eddd",
            "target_id": "i-03bedb543942bee3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "notification",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-notification/b2c8e0e9cc73f717-2026012304495163060000000e",
            "port": 8008,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-notification/b2c8e0e9cc73f717",
            "target_id": "i-00aaaf988aac1d62c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-payment/1f21416a42b473de-20260123044949951600000008",
            "port": 8004,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-payment/1f21416a42b473de",
            "target_id": "i-084e51edab72b0ac6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "reporting",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-reporting/38ee87248ad4b03b-20260123044949951600000009",
            "port": 8009,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-reporting/38ee87248ad4b03b",
            "target_id": "i-0e589e92f11c3021b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-tutoring/d02681edcf5e6924-2026012304494997320000000b",
            "port": 8003,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-tutoring/d02681edcf5e6924",
            "target_id": "i-03bedb543942bee3e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-user/941c889ac06d4da9-2026012304495184330000000f",
            "port": 8006,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149822431811:targetgroup/tg-user/941c889ac06d4da9",
            "target_id": "i-04e2efb492661db9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_internal_alb.aws_lb_target_group.svc",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.aws_instance.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_messaging_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-0b97d6b84df08b819",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b97d6b84df08b819",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089aa548b7c87f523",
            "private_dns": "ip-10-10-12-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.12.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0132b2c2ac1fc1455",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed8b11b15ee1c272",
            "tags": {
              "Name": "lab1-messaging-stack",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-messaging-stack",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06256247dbb24b9df",
              "sg-07cac267e8eb8f7da"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.rabbit"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:internet-gateway/igw-02852a61ddb0388cb",
            "id": "igw-02852a61ddb0388cb",
            "owner_id": "149822431811",
            "tags": {
              "Name": "lab1-igw",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-igw",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02852a61ddb0388cb",
            "id": "r-rtb-0ed8dec6d329f57a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed8dec6d329f57a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_internet_gateway.this",
            "module.lab1_network.aws_route_table.public",
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:route-table/rtb-0879cff1959c83999",
            "id": "rtb-0879cff1959c83999",
            "owner_id": "149822431811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-096332179859e458b",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab1-rt-private",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-rt-private",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:route-table/rtb-0ed8dec6d329f57a0",
            "id": "rtb-0ed8dec6d329f57a0",
            "owner_id": "149822431811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02852a61ddb0388cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab1-rt-public",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-rt-public",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069fa8de7a82b8e31",
            "route_table_id": "rtb-0879cff1959c83999",
            "subnet_id": "subnet-01208f25e975bf236"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0266568e744580768",
            "route_table_id": "rtb-0879cff1959c83999",
            "subnet_id": "subnet-0ed8b11b15ee1c272"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029d4b820960514e6",
            "route_table_id": "rtb-0ed8dec6d329f57a0",
            "subnet_id": "subnet-0d545f2665d02b2e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_route_table.public",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00477fd34456a244d",
            "route_table_id": "rtb-0ed8dec6d329f57a0",
            "subnet_id": "subnet-0cb82ebfb98160a5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_route_table.public",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:subnet/subnet-01208f25e975bf236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01208f25e975bf236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149822431811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab1-private-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-private-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:subnet/subnet-0ed8b11b15ee1c272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8b11b15ee1c272",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149822431811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab1-private-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-private-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:subnet/subnet-0d545f2665d02b2e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d545f2665d02b2e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149822431811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab1-public-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-public-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:subnet/subnet-0cb82ebfb98160a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb82ebfb98160a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149822431811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab1-public-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-public-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:vpc/vpc-0c7c2d74d16788023",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03db1c8b0c4a405a6",
            "default_route_table_id": "rtb-022a32223755f49d8",
            "default_security_group_id": "sg-0dbfc0348acd97169",
            "dhcp_options_id": "dopt-0c0f6f38aec217949",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7c2d74d16788023",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022a32223755f49d8",
            "owner_id": "149822431811",
            "tags": {
              "Name": "lab1-vpc",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-vpc",
              "env": "qa",
              "project": "uce-student-support-platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-0851bdfb126cb2cfc",
            "description": "Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0851bdfb126cb2cfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "59.153.47.119/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-bastion",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-bastion",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-0ebb2af5f3a8e276a",
            "description": "Postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebb2af5f3a8e276a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d19bf6fcafb2a693"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-db",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-db",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-0263deb8ab3f5f8b3",
            "description": "Public API Gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0263deb8ab3f5f8b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "59.153.47.119/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gateway-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-gateway",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-gateway",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-01c1cd0f79d1d13dc",
            "description": "Internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8002
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8003
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8004
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8005
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8006
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8007
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8008
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8009,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8009
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 8010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8010
              }
            ],
            "id": "sg-01c1cd0f79d1d13dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263deb8ab3f5f8b3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal-alb-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-internal-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-internal-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-06256247dbb24b9df",
            "description": "Kafka",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06256247dbb24b9df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d19bf6fcafb2a693"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "kafka-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-kafka",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-kafka",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-04dc7dcb9da2c610e",
            "description": "MongoDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dc7dcb9da2c610e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d19bf6fcafb2a693"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongo-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-mongo",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-mongo",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-07cac267e8eb8f7da",
            "description": "RabbitMQ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cac267e8eb8f7da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d19bf6fcafb2a693"
                ],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "rabbit-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-rabbit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-rabbit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-027794de2d63020b1",
            "description": "Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027794de2d63020b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d19bf6fcafb2a693"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-redis",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-redis",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149822431811:security-group/sg-0d19bf6fcafb2a693",
            "description": "Private microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "id": "sg-0d19bf6fcafb2a693",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0851bdfb126cb2cfc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8002
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8003
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8004
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8005
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8006
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8007
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8008
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8009,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8009
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1cd0f79d1d13dc"
                ],
                "self": false,
                "to_port": 8010
              }
            ],
            "name": "services-sg",
            "name_prefix": "",
            "owner_id": "149822431811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab1-sg-services",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-sg-services",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c2d74d16788023"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-417203489",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0851bdfb126cb2cfc",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1691006091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0851bdfb126cb2cfc",
            "security_group_rule_id": "sgr-04a8cfba751dd9d7d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "59.153.47.119/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-255871341",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0851bdfb126cb2cfc",
            "security_group_rule_id": "sgr-0504add8db1bbfb3e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1003676853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0851bdfb126cb2cfc",
            "security_group_rule_id": "sgr-050efc00e29ac63b9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1710145134",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ebb2af5f3a8e276a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1468586825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ebb2af5f3a8e276a",
            "security_group_rule_id": "sgr-0ae34bb8a8853cd2f",
            "self": false,
            "source_security_group_id": "sg-0d19bf6fcafb2a693",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1374419035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ebb2af5f3a8e276a",
            "security_group_rule_id": "sgr-0c3b388a7774f2711",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1067190597",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0263deb8ab3f5f8b3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_egress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-384444927",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0263deb8ab3f5f8b3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1180598245",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0263deb8ab3f5f8b3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-926512051",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0263deb8ab3f5f8b3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gateway_to_internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1902937850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0263deb8ab3f5f8b3",
            "security_group_rule_id": "sgr-082d22066d5da758b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_alb_from_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1080051632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-082f06dd00d693766",
            "self": false,
            "source_security_group_id": "sg-0263deb8ab3f5f8b3",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.gateway",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_alb_to_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "8001",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8001,
            "id": "sgrule-1622828055",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-04d14e25724e1c817",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8002",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8002,
            "id": "sgrule-2117750628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-0e2adb7d1fda530e7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8002,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8003",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8003,
            "id": "sgrule-1749024474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-04291a631b53edfbe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8003,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8004",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8004,
            "id": "sgrule-1739907125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-03da06807b6e62a4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8004,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8005",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8005,
            "id": "sgrule-1907446157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-00fe94e1466e15d21",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8005,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8006",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8006,
            "id": "sgrule-1865513722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-0dfde2d2ba0335189",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8006,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8007",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8007,
            "id": "sgrule-2033503040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-04eedf15b34a51d78",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8007,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8008",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8008,
            "id": "sgrule-1420410523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-07863111da7dbed4c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8008,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8009",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8009,
            "id": "sgrule-1118572323",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-073e3ba22e5012957",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8009,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        },
        {
          "index_key": "8010",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 8010,
            "id": "sgrule-370554042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c1cd0f79d1d13dc",
            "security_group_rule_id": "sgr-002e253376e750952",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8010,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kafka_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2010660966",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06256247dbb24b9df",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kafka_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9092,
            "id": "sgrule-259548292",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256247dbb24b9df",
            "security_group_rule_id": "sgr-0b2659684db7034d3",
            "self": false,
            "source_security_group_id": "sg-0d19bf6fcafb2a693",
            "timeouts": null,
            "to_port": 9092,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kafka_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2069527660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06256247dbb24b9df",
            "security_group_rule_id": "sgr-07a0056893169cd75",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.kafka"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-404844874",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04dc7dcb9da2c610e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 27017,
            "id": "sgrule-134663273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dc7dcb9da2c610e",
            "security_group_rule_id": "sgr-0d3011f8c61f64e29",
            "self": false,
            "source_security_group_id": "sg-0d19bf6fcafb2a693",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongo_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2117040305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dc7dcb9da2c610e",
            "security_group_rule_id": "sgr-04fe3d8aefc193c27",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rabbit_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1874233737",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07cac267e8eb8f7da",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.rabbit"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rabbit_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5672,
            "id": "sgrule-281695570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07cac267e8eb8f7da",
            "security_group_rule_id": "sgr-0a68167295ee4b474",
            "self": false,
            "source_security_group_id": "sg-0d19bf6fcafb2a693",
            "timeouts": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rabbit_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1309237230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07cac267e8eb8f7da",
            "security_group_rule_id": "sgr-0865bd910ecb757e1",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.rabbit"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1825248157",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-027794de2d63020b1",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6379,
            "id": "sgrule-115891169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027794de2d63020b1",
            "security_group_rule_id": "sgr-038d2e5da3c31cbe5",
            "self": false,
            "source_security_group_id": "sg-0d19bf6fcafb2a693",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1034379997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027794de2d63020b1",
            "security_group_rule_id": "sgr-0b09aa49cc09084aa",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-588661000",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_egress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-310656082",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_from_internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "8001",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8001,
            "id": "sgrule-1072361589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-092e03f2b571518f1",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8002",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8002,
            "id": "sgrule-1203553239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0eb51f0f035c72847",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8002,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8003",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8003,
            "id": "sgrule-987465699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-08856b529f1aafeee",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8003,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8004",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8004,
            "id": "sgrule-1818338000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0c623b59b25abbf50",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8004,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8005",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8005,
            "id": "sgrule-285664996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0e6bf8917dce92cdc",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8005,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8006",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8006,
            "id": "sgrule-1766905160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0821271165b1a2ce7",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8006,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8007",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8007,
            "id": "sgrule-339186036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-03a74ec9cbd02c23f",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8007,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8008",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8008,
            "id": "sgrule-525703523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0902a73ad8c3548d8",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8008,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8009",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8009,
            "id": "sgrule-1647500631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-083146c4315e606cb",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8009,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "8010",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8010,
            "id": "sgrule-1665410992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0c1ac7ede7e4afd0d",
            "self": false,
            "source_security_group_id": "sg-01c1cd0f79d1d13dc",
            "timeouts": null,
            "to_port": 8010,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.internal_alb",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-650869642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-02ee982faa81857f4",
            "self": false,
            "source_security_group_id": "sg-0851bdfb126cb2cfc",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services_to_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": "27017",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-1314206675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-04bb849a7aa879faf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "5432",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1253521325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0677ae492ab41d991",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "5672",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 5672,
            "id": "sgrule-888315166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0e1df70811931246f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5672,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "6379",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 6379,
            "id": "sgrule-716218175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-05371337166f90468",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        },
        {
          "index_key": "9092",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": null,
            "from_port": 9092,
            "id": "sgrule-952552186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d19bf6fcafb2a693",
            "security_group_rule_id": "sgr-0f4d5b25cb226f72b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9092,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.lab1_services",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-04e2efb492661db9b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e2efb492661db9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e71ac02b6ab14251",
            "private_dns": "ip-10-10-11-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.11.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024ae510c09783893",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01208f25e975bf236",
            "tags": {
              "Name": "lab1-ms-auth-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-ms-auth-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d19bf6fcafb2a693"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-03bedb543942bee3e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bedb543942bee3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f8c5ae68c251981",
            "private_dns": "ip-10-10-12-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.12.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05da7c7027059c337",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed8b11b15ee1c272",
            "tags": {
              "Name": "lab1-ms-tutoring-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-ms-tutoring-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d19bf6fcafb2a693"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-084e51edab72b0ac6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084e51edab72b0ac6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e0c8e23d598c85eb",
            "private_dns": "ip-10-10-11-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.11.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d15bd574c83aeceb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01208f25e975bf236",
            "tags": {
              "Name": "lab1-ms-payment-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-ms-payment-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d19bf6fcafb2a693"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-00aaaf988aac1d62c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00aaaf988aac1d62c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b8527919528ca2c",
            "private_dns": "ip-10-10-12-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.12.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc60592781499dcc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed8b11b15ee1c272",
            "tags": {
              "Name": "lab1-ms-academic-record-notification",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-ms-academic-record-notification",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d19bf6fcafb2a693"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:149822431811:instance/i-0e589e92f11c3021b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e589e92f11c3021b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "uce-lab1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b19911e2055e6e2d",
            "private_dns": "ip-10-10-11-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.11.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0967da2107c865bdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01208f25e975bf236",
            "tags": {
              "Name": "lab1-ms-reporting-audit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab1-ms-reporting-audit",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d19bf6fcafb2a693"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route.lab1_private_to_bastion_nat",
            "module.lab1_bastion.aws_instance.this",
            "module.lab1_bastion.data.aws_ami.ubuntu",
            "module.lab1_data_stack.aws_instance.data",
            "module.lab1_data_stack.data.aws_ami.ubuntu",
            "module.lab1_messaging_stack.aws_instance.this",
            "module.lab1_messaging_stack.data.aws_ami.ubuntu",
            "module.lab1_network.aws_route_table.private",
            "module.lab1_network.aws_subnet.private",
            "module.lab1_network.aws_subnet.public",
            "module.lab1_network.aws_vpc.this",
            "module.lab1_security_groups.aws_security_group.bastion",
            "module.lab1_security_groups.aws_security_group.db",
            "module.lab1_security_groups.aws_security_group.kafka",
            "module.lab1_security_groups.aws_security_group.mongo",
            "module.lab1_security_groups.aws_security_group.rabbit",
            "module.lab1_security_groups.aws_security_group.redis",
            "module.lab1_security_groups.aws_security_group.services",
            "module.lab1_services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73",
            "arn_suffix": "app/public-frontends-alb/c83b5b8575964a73",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-frontends-alb-1769398166.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-frontends-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07655ef65a0036832"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01217d27f11135158"
              },
              {
                "subnet_id": "subnet-0de8a8c0bd27599a5"
              }
            ],
            "subnets": [
              "subnet-01217d27f11135158",
              "subnet-0de8a8c0bd27599a5"
            ],
            "tags": {
              "Name": "lab2-frontend-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-frontend-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-auth/829df630564e2256",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontend_alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "paths",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-academic-record/bcc96da317944f4d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/c758af4e2cf0d28c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/records/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/c758af4e2cf0d28c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 60,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "admin",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-admin/a8791d3c27f22c4f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/c8af2459b6526a16",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/admin/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/c8af2459b6526a16",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 70,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-calendar/1a6b3e3dda9d5672",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/dfb0ab259c661a2c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/calendar/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/dfb0ab259c661a2c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 50,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-forum/daca8b9c23369766",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/52e0937c66e728c9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/forum/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/52e0937c66e728c9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 30,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-payment/fffdb02e1b275318",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/ce66687cac7d7c59",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payments/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/ce66687cac7d7c59",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 40,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-tutoring/d6dc23316d19b3d5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/1f049793e8f0f779",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/tutoring/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/1f049793e8f0f779",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-user/cfaba7621f7882c8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/7d66f366bf793b8e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/users/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener-rule/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9/7d66f366bf793b8e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:listener/app/public-frontends-alb/c83b5b8575964a73/04abe3e9373db5f9",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb.this",
            "module.lab2_frontend_alb.aws_lb_listener.http",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-academic-record/bcc96da317944f4d",
            "arn_suffix": "targetgroup/tg-fe-academic-record/bcc96da317944f4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-academic-record/bcc96da317944f4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-academic-record",
            "port": 3007,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-academic-record",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-academic-record",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "admin",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-admin/a8791d3c27f22c4f",
            "arn_suffix": "targetgroup/tg-fe-admin/a8791d3c27f22c4f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-admin/a8791d3c27f22c4f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-admin",
            "port": 3010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-admin",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-admin",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-auth/829df630564e2256",
            "arn_suffix": "targetgroup/tg-fe-auth/829df630564e2256",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-auth/829df630564e2256",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-auth",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-auth",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-auth",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-calendar/1a6b3e3dda9d5672",
            "arn_suffix": "targetgroup/tg-fe-calendar/1a6b3e3dda9d5672",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-calendar/1a6b3e3dda9d5672",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-calendar",
            "port": 3006,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-forum/daca8b9c23369766",
            "arn_suffix": "targetgroup/tg-fe-forum/daca8b9c23369766",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-forum/daca8b9c23369766",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-forum",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-payment/fffdb02e1b275318",
            "arn_suffix": "targetgroup/tg-fe-payment/fffdb02e1b275318",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-payment/fffdb02e1b275318",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-payment",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-payment",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-payment",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-tutoring/d6dc23316d19b3d5",
            "arn_suffix": "targetgroup/tg-fe-tutoring/d6dc23316d19b3d5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-tutoring/d6dc23316d19b3d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-tutoring",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-tutoring",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-tutoring",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-user/cfaba7621f7882c8",
            "arn_suffix": "targetgroup/tg-fe-user/cfaba7621f7882c8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-user/cfaba7621f7882c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:214941538302:loadbalancer/app/public-frontends-alb/c83b5b8575964a73"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fe-user",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab2-tg-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-tg-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fe_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": "academic-record",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-academic-record/bcc96da317944f4d-20260123061111749500000007",
            "port": 3007,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-academic-record/bcc96da317944f4d",
            "target_id": "i-0c1ed338a5663bb35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "admin",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-admin/a8791d3c27f22c4f-2026012306111183020000000a",
            "port": 3010,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-admin/a8791d3c27f22c4f",
            "target_id": "i-0c1ed338a5663bb35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-auth/829df630564e2256-20260123061111753100000008",
            "port": 3001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-auth/829df630564e2256",
            "target_id": "i-0cc70c02a44ba8c64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "calendar",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-calendar/1a6b3e3dda9d5672-2026012306111200140000000b",
            "port": 3006,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-calendar/1a6b3e3dda9d5672",
            "target_id": "i-0e031e6c655378c0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "forum",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-forum/daca8b9c23369766-20260123061111798600000009",
            "port": 3004,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-forum/daca8b9c23369766",
            "target_id": "i-02f74667f482f63af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-payment/fffdb02e1b275318-20260123061111712200000006",
            "port": 3005,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-payment/fffdb02e1b275318",
            "target_id": "i-0e031e6c655378c0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "tutoring",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-tutoring/d6dc23316d19b3d5-20260123061111712200000005",
            "port": 3003,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-tutoring/d6dc23316d19b3d5",
            "target_id": "i-02f74667f482f63af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-user/cfaba7621f7882c8-2026012306111202930000000c",
            "port": 3002,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:214941538302:targetgroup/tg-fe-user/cfaba7621f7882c8",
            "target_id": "i-0cc70c02a44ba8c64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontend_alb.aws_lb_target_group.fe",
            "module.lab2_frontends.aws_instance.frontends",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_frontends",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontends",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:214941538302:instance/i-0cc70c02a44ba8c64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc70c02a44ba8c64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050954920126973d8",
            "private_dns": "ip-10-20-1-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.118",
            "public_dns": "ec2-100-26-5-121.compute-1.amazonaws.com",
            "public_ip": "100.26.5.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0805c68740e8b51b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de8a8c0bd27599a5",
            "tags": {
              "Name": "lab2-fe-auth-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-fe-auth-user",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-013cc4288904fec9b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:214941538302:instance/i-02f74667f482f63af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f74667f482f63af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04285653931b9abd5",
            "private_dns": "ip-10-20-2-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.103",
            "public_dns": "ec2-44-211-226-26.compute-1.amazonaws.com",
            "public_ip": "44.211.226.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05deb590f89d4d32d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01217d27f11135158",
            "tags": {
              "Name": "lab2-fe-tutoring-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-fe-tutoring-forum",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-013cc4288904fec9b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:214941538302:instance/i-0e031e6c655378c0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e031e6c655378c0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017dafeac5d739261",
            "private_dns": "ip-10-20-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.134",
            "public_dns": "ec2-100-31-130-237.compute-1.amazonaws.com",
            "public_ip": "100.31.130.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cacdeb3c1f68469",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de8a8c0bd27599a5",
            "tags": {
              "Name": "lab2-fe-payment-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-fe-payment-calendar",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-013cc4288904fec9b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:214941538302:instance/i-0c1ed338a5663bb35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1ed338a5663bb35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uce-lab2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f7255b383eb357c",
            "private_dns": "ip-10-20-2-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.132",
            "public_dns": "ec2-44-203-203-188.compute-1.amazonaws.com",
            "public_ip": "44.203.203.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042072f411f5ca5af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01217d27f11135158",
            "tags": {
              "Name": "lab2-fe-academic-record-admin",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-fe-academic-record-admin",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-013cc4288904fec9b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab1_gateway.aws_eip.this",
            "module.lab1_gateway.data.aws_eip.existing",
            "module.lab2_frontends.data.aws_ami.ubuntu",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:internet-gateway/igw-02bf498a055859f41",
            "id": "igw-02bf498a055859f41",
            "owner_id": "214941538302",
            "tags": {
              "Name": "lab2-igw",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-igw",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02bf498a055859f41",
            "id": "r-rtb-0a33b334b4e863f3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a33b334b4e863f3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_internet_gateway.this",
            "module.lab2_network.aws_route_table.public",
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:route-table/rtb-05ca01c3e2d97a923",
            "id": "rtb-05ca01c3e2d97a923",
            "owner_id": "214941538302",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab2-rt-private",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-rt-private",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:route-table/rtb-0a33b334b4e863f3c",
            "id": "rtb-0a33b334b4e863f3c",
            "owner_id": "214941538302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bf498a055859f41",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab2-rt-public",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-rt-public",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f014f11875aa64e5",
            "route_table_id": "rtb-05ca01c3e2d97a923",
            "subnet_id": "subnet-0d5c96b41b7144a03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_route_table.private",
            "module.lab2_network.aws_subnet.private",
            "module.lab2_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ebd2a7901ed5fe9",
            "route_table_id": "rtb-05ca01c3e2d97a923",
            "subnet_id": "subnet-0915ef98b83c62289"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_route_table.private",
            "module.lab2_network.aws_subnet.private",
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c86e3bb34d6635d5",
            "route_table_id": "rtb-0a33b334b4e863f3c",
            "subnet_id": "subnet-0de8a8c0bd27599a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_route_table.public",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c2e03f77d248efb",
            "route_table_id": "rtb-0a33b334b4e863f3c",
            "subnet_id": "subnet-01217d27f11135158"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_route_table.public",
            "module.lab2_network.aws_subnet.public",
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:subnet/subnet-0d5c96b41b7144a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5c96b41b7144a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214941538302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-private-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-private-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:subnet/subnet-0915ef98b83c62289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915ef98b83c62289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214941538302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-private-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-private-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:subnet/subnet-0de8a8c0bd27599a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de8a8c0bd27599a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214941538302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-public-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-public-1",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:subnet/subnet-01217d27f11135158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01217d27f11135158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214941538302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab2-public-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-public-2",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:vpc/vpc-00fe580ff34dd61fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0c25ee5c2a7626448",
            "default_route_table_id": "rtb-04782ca17d9204dd9",
            "default_security_group_id": "sg-0de2e9f061d69aa9f",
            "dhcp_options_id": "dopt-0f372c8022a9f690f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fe580ff34dd61fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04782ca17d9204dd9",
            "owner_id": "214941538302",
            "tags": {
              "Name": "lab2-vpc",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-vpc",
              "env": "qa",
              "project": "uce-student-support-platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:security-group/sg-07655ef65a0036832",
            "description": "Public ALB for frontends",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              }
            ],
            "id": "sg-07655ef65a0036832",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-alb-sg",
            "name_prefix": "",
            "owner_id": "214941538302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab2-sg-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-sg-alb",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214941538302:security-group/sg-013cc4288904fec9b",
            "description": "Frontend EC2s",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013cc4288904fec9b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07655ef65a0036832"
                ],
                "self": false,
                "to_port": 3100
              }
            ],
            "name": "frontends-sg",
            "name_prefix": "",
            "owner_id": "214941538302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab2-sg-frontends",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "tags_all": {
              "Name": "lab2-sg-frontends",
              "env": "qa",
              "project": "uce-student-support-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe580ff34dd61fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-654028684",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07655ef65a0036832",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.20.0.0/16"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1672903903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07655ef65a0036832",
            "security_group_rule_id": "sgr-0bc467ef74739a612",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3100,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-205029616",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-013cc4288904fec9b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "module": "module.lab2_security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].lab2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1441321414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013cc4288904fec9b",
            "security_group_rule_id": "sgr-02c10863f91a40bf3",
            "self": false,
            "source_security_group_id": "sg-07655ef65a0036832",
            "timeouts": null,
            "to_port": 3100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.lab2_network.aws_vpc.this",
            "module.lab2_security_groups.aws_security_group.alb",
            "module.lab2_security_groups.aws_security_group.frontend"
          ]
        }
      ]
    }
  ]
}